hphp/hack/test/typecheck/collection_missing_argl1.php
<?hh

/* HH_FIXME[4101] */
function f(Vector $x): void {
  $y = $x[0];
}
